# stadium_pulse

./: .coverage  .gitignore  README.md  SECURITY.md  extra.txt  render.yaml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  main.py  pyproject.toml  render.yaml  requirements-dev.txt  requirements-frozen.txt  requirements.txt
backend/agents/: anomaly_detector.py  base_agent.py  crowd_intelligence_agent.py  decision_orchestrator.py  fan_assistant_agent.py  voice_agent_worker.py  wayfinding_agent.py
backend/api/: routes_control_room.py  routes_crowd.py  routes_fan_assistant.py  routes_voice.py  routes_wayfinding.py  websocket_feed.py
backend/core/: config.py  error_handlers.py  errors.py  logging_config.py  rate_limiter.py  security.py  security_headers.py
backend/features/control_room/: anomaly_service.py  incident_store.py  orchestrator_service.py  routes.py  schemas.py  ws.py
backend/features/crowd/: routes.py  schemas.py  sensor_simulator.py  service.py
backend/features/fan_assistant/: faq_data.py  routes.py  schemas.py  service.py
backend/features/voice/: routes.py  schemas.py  service.py  worker.py
backend/features/wayfinding/: graph.py  routes.py  schemas.py  service.py
backend/models/: schemas.py
backend/services/: cache_service.py  faq_knowledge.py  gemini_client.py  incident_store.py  reasoning_logger.py  sensor_simulator.py  stadium_graph.py  voice_service.py
backend/shared/: base_agent.py  schemas.py
backend/tests/: conftest.py  test_anomaly_detector.py  test_cache_service.py  test_control_room_routes.py  test_control_room_ws.py  test_crowd_agent.py  test_crowd_routes.py  test_decision_orchestrator.py  test_error_handlers.py  test_errors.py  test_fan_assistant.py  test_fan_assistant_routes.py  test_faq_knowledge.py  test_incident_store.py  test_main_routes.py  test_rate_limiter.py  test_security.py  test_security_headers.py  test_sensor_simulator.py  test_stadium_graph.py  test_voice_routes.py  test_voice_service.py  test_wayfinding_agent.py  test_wayfinding_routes.py
docs/: decisions.md
frontend/: .env.example  .gitignore  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vitest.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/control-room/: page.tsx
frontend/app/fan-app/: page.tsx
frontend/components/control-room/: DecisionFeed.tsx  IncidentAlert.tsx  ReasoningTrace.tsx  ZoneHeatmap.tsx
frontend/components/fan-app/: ChatAssistant.tsx  LanguageSelector.tsx  LowSensoryToggle.tsx  (+3 more)
frontend/hooks/: useWebSocket.ts
frontend/lib/: api-client.ts  websocket-client.ts
frontend/tests/: ChatAssistant.test.tsx  LowSensoryToggle.test.tsx  NavigationMap.test.tsx  setup.ts
frontend/types/: index.ts
(+2 files in other folders)
