[project]
name = "stadiumpulse-backend"
version = "1.0.0"
description = "StadiumPulse — AI-powered stadium operations backend (FastAPI + Gemini)"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["tests/fixtures"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort (import order)
    "B",   # flake8-bugbear (common bug patterns)
    "UP",  # pyupgrade (modern Python idioms)
    "SIM", # flake8-simplify
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # line length handled by formatter, not worth failing CI over
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B008"]  # pytest fixtures rely on function-call defaults

[tool.ruff.lint.isort]
known-first-party = ["agents", "api", "core", "models", "services"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false   # not enforced yet — agents/ predates type hints in places
check_untyped_defs = true
ignore_missing_imports = true   # third-party stubs (livekit, slowapi, google-generativeai) are incomplete
exclude = ["tests/"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
